--- a/confirmation.html
+++ b/confirmation.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,17 +7,14 @@
 <title>Payment Confirmation</title>
 <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gradient-to-r from-green-50 to-teal-50 min-h-screen flex flex-col items-center justify-center p-4">
+<body class="bg-gradient-to-r from-green-50 to-blue-50 min-h-screen flex items-center justify-center p-4">
 
 <div class="max-w-md w-full bg-white rounded-3xl shadow-2xl p-8 border border-gray-200 text-center">
 
-  <h1 class="text-3xl font-extrabold text-green-700 mb-6">Payment Under Review</h1>
+  <h1 class="text-3xl font-extrabold text-green-700 mb-4">Payment Under Review</h1>
 
-  <p id="confirmationMsg" class="text-gray-700 text-lg mb-6"></p>
+  <p id="confirmationMessage" class="text-gray-700 text-lg"></p>
 
-  <img src="https://cdn-icons-png.flaticon.com/512/190/190411.png" alt="Success" class="w-32 mx-auto mb-6"/>
-
-  <a href="index.html" class="bg-green-600 hover:bg-green-700 text-white font-bold py-3 px-6 rounded-2xl shadow transition">Back to Dashboard</a>
 </div>
 
 <script>
@@ -25,9 +23,8 @@ const client = params.get('client') || 'Customer';
 const amount = params.get('amount') || '0';
 const app = params.get('app') || 'Payment';
 
-document.getElementById('confirmationMsg').innerText =
-  `Dear "${decodeURIComponent(client)}" Sir/Mam,\n\nYour ₹"${decodeURIComponent(amount)}" payment for "${decodeURIComponent(app)}" is under review.\n\nAfter confirmation, you will receive the NOC of loan closing.`;
+document.getElementById('confirmationMessage').innerText = 
+  `Dear "${decodeURIComponent(client)}" Sir/Mam,\n\nYour ₹"${decodeURIComponent(amount)}" payment for "${decodeURIComponent(app)}" is under review. After confirmation, you will receive the NOC for loan closing.`;
 </script>
-
 </body>
 </html>
